# OnsVel-Pedal

./: .gitignore  02_train_pedal_model.py  03_evaluate_pedal_model.py  04_evaluate_test_split.py  06_visualize_pedal_predictions.py  0a_maestro_to_hdf5mel.py  1_train_onsets_velocities.py  2_eval_onsets_velocities.py  2_eval_test_only.py  4_qualitative_plots.py  EVALUATION_FIXES_SUMMARY.md  MEMORY_ISSUE_SOLUTION.md  PROJECT_STRUCTURE.md  QUICK_START_EVALUATION.md  README.md  TRAINING_GUIDE_3-5_DAYS.md  debug_pedal_evaluation.py  environment.yml  pyproject.toml  requirements.txt  setup.py  temp_smoke_test.py
_archived_files/: cleaned_attendance.csv  train.bat
_archived_files/debug_scripts/: analyze_dataset_splits.py  check_pedal_structure.py  debug_memory.py  debug_model_probe.py  eval_with_pedals.py  fixed_strided_inference.py  memory_optimizations.py  pedal_inference_demo.py  quick_verify_sustain_pedal.py  simple_eval.py  test_pedal_evaluation.py  train_with_optimizations.py  (+2 more)
docs/: EVALUATION_FIXES_SUMMARY.md  MEMORY_ISSUE_SOLUTION.md  PROJECT_STRUCTURE.md  QUICK_START_EVALUATION.md  README.md  TRAINING_GUIDE_3-5_DAYS.md
ov_piano/: eval.py  inference.py  transcription.py  utils.py
scripts/: 00_prepare_maestro_hdf5.py  01_prepare_maps_hdf5.py  02_train_pedal_model.py  03_evaluate_pedal_model.py  04_evaluate_test_split.py  05_analyze_training_logs.py  06_visualize_pedal_predictions.py  debug_model_probe2.py  debug_pedal_gt.py  temp_smoke_test.py  transcribe.py
tests/: test_load_model.py  test_midi_parser_fixtures.py  test_pedal_decoder.py  test_smoke_inference.py  test_transcribe_cli.py  test_transcription.py  test_web_app_api.py
web_app/: app.py
(+23 files in other folders)
