[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ov_piano"
version = "0.1"
description = "Pedal-aware piano onset, velocity, and sustain pedal prediction from audio."
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.9,<3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "OnsVel-Pedal contributors" },
]
keywords = [
    "audio",
    "deep-learning",
    "music-transcription",
    "piano",
    "sustain-pedal",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "coloredlogs>=15.0",
    "flask>=2.0",
    "h5py>=3.6",
    "matplotlib>=3.7",
    "mido>=1.2",
    "mir-eval>=0.7",
    "numpy>=1.23,<2.0",
    "omegaconf>=2.1",
    "pandas>=1.4",
    "parse>=1.19",
    "pillow>=9.0",
    "psutil>=5.9",
    "pydub>=0.25",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "pytz>=2022.0",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "torch>=1.11",
    "torchaudio>=0.11",
    "unidecode>=1.3",
    "werkzeug>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
dev = [
    "build>=1.0",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ov_piano", "ov_piano.*"]